<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>cn.creekmoon</groupId>
        <artifactId>operation-log-parent</artifactId>
        <version>2.2.0</version>
    </parent>

    <name>operation-log-boot-starter</name>
    <artifactId>operation-log-boot-starter</artifactId>
    <version>${operation-log.version}</version>


    <dependencies>
        <!-- swagger v3依赖-->
        <dependency>
            <groupId>io.swagger.core.v3</groupId>
            <artifactId>swagger-annotations-jakarta</artifactId>
        </dependency>
        <!--hutool工具类-->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
        </dependency>
        <!--spring基本依赖-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <scope>provided</scope>
        </dependency>
        <!--spring基本依赖  切面注解-->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>

        <!-- Redis依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Actuator依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Apache Commons CSV -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.10.0</version>
        </dependency>

        <!-- 测试依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!--打包所需的插件 好像去掉也没问题-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.maven.plugins</groupId>-->
        <!--            <artifactId>maven-gpg-plugin</artifactId>-->
        <!--            <scope>compile</scope>-->
        <!--        </dependency>-->
        <!--如果引用时报String转换错误，可以引用这个包-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.httpcomponents</groupId>-->
        <!--            <artifactId>httpclient</artifactId>-->
        <!--            <version>4.5.13</version>-->
        <!--        </dependency>-->
        <!--如果引用时报ES的客户端错误，可以引用这个包-->
        <!--        <dependency>-->
        <!--            <groupId>jakarta.json</groupId>-->
        <!--            <artifactId>jakarta.json-api</artifactId>-->
        <!--            <version>2.1.2</version>-->
        <!--        </dependency>-->
    </dependencies>


    <description>
        一个简易记录用户操作日志的Spring应用程序
        A simple spring application that records user operations
    </description>
    <url>https://github.com/creekmoon/opration-log-boot-starter</url>

    <!--注意 install会有报错, 但是不会影响结果-->
    <!--这是因为javadoc解析出的格式错误, 已经启用<doclint>none</doclint>忽略了错误-->


    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/creekmoon/opration-log-boot-starter/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:https://gitee.com/creekmoon/operation-log-starter.git</connection>
        <developerConnection>scm:git:https://gitee.com/creekmoon/operation-log-starter.git</developerConnection>
        <url>https://gitee.com/creekmoon/operation-log-starter</url>
    </scm>

    <developers>
        <developer>
            <name>JY</name>
            <email>yinjiangyue@hotmail.com</email>
            <url>https://gitee.com/creekmoon</url>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>maven_oss_push</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>maven_oss_push</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>


    <build>
        <pluginManagement>
            <plugins>
                <!--定义编译版本-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <!--配置注解处理器 貌似不配置也会有提示-->
                        <annotationProcessors>
                            <annotationProcessor>
                                org.springframework.boot.configurationprocessor.ConfigurationMetadataAnnotationProcessor
                            </annotationProcessor>
                            <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor
                            </annotationProcessor>
                        </annotationProcessors>
                    </configuration>
                </plugin>
                <!--定义源码解析插件-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludeResources>true</excludeResources>
                        <useDefaultExcludes>true</useDefaultExcludes>
                    </configuration>
                </plugin>

                <!--定义javadoc插件  整个过程会有报错,因为有些注释格式不正确.但是不影响结果 已经启用<doclint>none</doclint>忽略了错误-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.2</version>
                    <inherited>true</inherited>
                    <executions>
                        <execution>
                            <id>bundle-sources</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <maxmemory>1024</maxmemory>
                        <encoding>UTF-8</encoding>
                        <show>protected</show>
                        <notree>true</notree>
                        <failOnError>false</failOnError>
                        <doclint>none</doclint>
                    </configuration>
                </plugin>

                <!--定义gpg签名插件 Gpg4win 构建时会自动调用gpg.exe进行签名-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>1.6</version>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
        <plugins>
            <!--我们上传的jar包，需要包含doc和源码-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <!--  必须配置GPG插件用于使用以下配置对组件进行签名 -->
            <!-- GPG -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
            </plugin>
            <!-- Surefire 测试插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <useModulePath>false</useModulePath>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <threadCount>1</threadCount>
                    <parallel>none</parallel>
                    <!-- 保留 JaCoCo 的 argLine，同时添加 JVM 内存配置 -->
                    <argLine>${argLine} -Xmx1024m</argLine>
                    <systemPropertyVariables>
                        <mockito.mock-maker-class>inline</mockito.mock-maker-class>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>